--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@reduxjs/toolkit": "^1.7.1",
     "@tensorflow-models/posenet": "^2.2.1",
     "@tensorflow/tfjs": "^2.8.5",
     "@tensorflow/tfjs-backend-cpu": "^2.8.5",
@@ -33,6 +34,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/react": "~17.0.21",
     "@types/react-dom": "~17.0.9",
     "@types/react-native": "~0.64.12",
+    "@types/react-redux": "^7.1.22",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "babel-plugin-module-resolver": "^4.1.0",
